service was implemented

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angular-fusioncharts": "^3.0.3",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.2",
+    "fusioncharts": "^3.14.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
